Titol nou i color de fons

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>Document sense nom</title>
+    <link rel="stylesheet" href="css/estils.css">
 </head>
 
 <body>
+
+<h1>Primer projecte GitHub</h1>
 
 </body>
 
